logs/Slang/generated/yosys/simple_usb_phy_tests.sv.log
name: simple_usb_phy_tests
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/usb_phy_tests.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/usb_phy_tests.v:14:8: error: language feature not yet supported
always @*
       ^~
